--- a/_config.yml
+++ b/_config.yml
@@ -212,8 +212,9 @@ font:
 # Social Links
 # Key is the link label showing to end users.
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
-#social:
-  #LinkLabel: Link
+social:
+  GitHub: https://github.com/RicardoWang99
+  ZhiHu: https://www.zhihu.com/people/wang-xi-ping-57/activities
 
 
 # Social Links Icons
