--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: Ricardo's Blog
 subtitle:
 description:
 author: Ricardo Wang
